Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41753

Visual Studio MdilXapCompile step fails on Windows Phone

XMLWordPrintable

    • WinRT
    • 50bf54c

      When using CONFIG+=windeployqt, VS isn't smart enough to copy the Qt directory structure into the release/MSIL directory, causing deployment to fail. This means that one can't create packages for the Windows Store without a workaround (either adding the DLLs manually, or copying the plugins directories to the release/MSIL directory).

      The ideal solution would be to disable this automatic step created by VS, as it is not required for native DLLs. Initial investigation shows that disabling it is not possible, without replacing the entire phone deployment feature.

      Another solution is to make the windeployqt step occur at Makefile generation time instead, and then add the Qt DLLs to the vcxproj in the traditional way. This requires that windeployqt have a feature to generate dependencies without a target binary. It has the advantage that the Qt libraries would actually show up in the VS UI, giving the user a better understanding of what will be packaged with their app.

      If we go with the second route, there should probably be a flag so that the current behavior of the windeployqt feature be used unless we want to use the new version. This flag could even be added to the windows phone mkspec by default.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mkalinow Maurice Kalinowski
            andrew.knight Andrew Knight
            Votes:
            6 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes